tests/e2e/keywords/Map_is_keyword.error
Error: syntax error in story at line 1, column 1

1|    Map = 1
      ^^^

E0020: `Map` is a reserved keyword
